[gd_scene load_steps=6 format=3 uid="uid://c4hkljr3n63on"]

[ext_resource type="Script" path="res://Scenes/Objects/CoalPile.gd" id="1_gsi4p"]
[ext_resource type="Texture2D" uid="uid://e5o5bkbhd1dm" path="res://Assets/Images/coalpile_large.png" id="1_pxc7k"]
[ext_resource type="Texture2D" uid="uid://yxxm5310573g" path="res://Assets/Images/coalpile_medium.png" id="2_lhur1"]
[ext_resource type="Texture2D" uid="uid://0g7psx374lkd" path="res://Assets/Images/coalpile_small.png" id="3_xwn02"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i1lrt"]
size = Vector3(0.573552, 0.67158, 1)

[node name="CoalPile" type="Node3D"]
script = ExtResource("1_gsi4p")

[node name="SpriteLarge" type="Sprite3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
offset = Vector2(-3.865, 31.855)
alpha_cut = 1
texture_filter = 0
texture = ExtResource("1_pxc7k")

[node name="SpriteMedium" type="Sprite3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
offset = Vector2(-3.865, 31.855)
alpha_cut = 1
texture_filter = 0
texture = ExtResource("2_lhur1")

[node name="SpriteSmall" type="Sprite3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
offset = Vector2(-3.865, 31.855)
alpha_cut = 1
texture_filter = 0
texture = ExtResource("3_xwn02")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0373936, 0.31785, 0)
shape = SubResource("BoxShape3D_i1lrt")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
